[package]
name = "wk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
bson = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
mongodb = { version = "2.0.0-beta.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3"
